調整專案為 JDK 8 與 Spring Boot 2 相容
- 將可執行範例降版為 JDK 8 相容設定
- 把第 20 章範例改為 legacy Moduliths 寫法
- 更新 README 與相關教學文件的版本標記

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>